--- a/index.css
+++ b/index.css
@@ -60,7 +60,8 @@ button:hover{
 #result{
     font-style: italic;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: lighter;
+    font-weight: bold;
     color: white;
     margin-top: 10px;
+    margin-left: 10px;
 }
